window.SIDEBAR_ITEMS = {"enum":["FieldFanType","FieldLabel","FieldNullInterpretation","KeyExpression","KeyExpressionInternal","KeyExpressionSchema","KeyExpressionSchemaScalarPrimitive","KeyExpressionSchemaVectorPrimitive"],"fn":["concat","field"],"mod":["error","pb","record_type_key_expression","well_formed_message_descriptor"],"struct":["Concat","Field","Nest"]};